# Physics-in-Parallel

./: Cargo.toml  LICENSE  README.md
examples/: serde_flat_json.rs  vector_list_ndarray.rs
python/: README.md  numpy_support.py
src/: engines.rs  lib.rs  main.rs  math.rs  models.rs  prelude.rs  space.rs
src/engines/: prelude.rs  soa.rs  soa_engine.rs
src/engines/soa/: boundary.rs  integrator.rs  interaction.rs  neighbor_list.rs  neighbors.rs  observe.rs  phys_obj.rs  thermostat.rs
src/engines/soa/thermostat/: langevin.rs
src/engines/soa_engine/: interaction.rs  phys_obj.rs
src/field/: mod.rs  scalar_complex.rs  scalar_real.rs
src/io/: json.rs  mod.rs  ndarray.rs
src/linalg/: mod.rs  vector_list.rs
src/math/: ndarray_convert.rs  prelude.rs  scalar.rs  tensor.rs  tensor_2d.rs
src/math/scalar/: complex.rs  real.rs  scalar_trait.rs
src/math/tensor/: dense.rs  dense_rand.rs  mod.rs  rank_2.rs  sparse.rs  tensor_rand.rs  tensor_trait.rs
src/math/tensor/core/: dense.rs  dense_rand.rs  mod.rs  sparse.rs  tensor_trait.rs  unified.rs
src/math/tensor/rank_2/: dense.rs  matrix.rs  mod.rs  sparse.rs  vector_list.rs
src/math/tensor/rank_2/matrix/: dense.rs  matrix_trait.rs  mod.rs
src/math/tensor/rank_2/vector_list/: mod.rs  rand.rs
src/math/tensor_2d/: matrix.rs  vector_list.rs  vector_list_rand.rs
src/math/tensor_2d/matrix/: dense.rs  matrix_trait.rs
src/math/vector/: mod.rs  vector_list.rs  vector_list_rand.rs
src/math_fundations/: mod.rs  scalar.rs  vector_list.rs  vector_list_rand.rs
src/math_fundations/tensor/: dense.rs  sparse.rs
src/models/particles/: attrs.rs  boundary.rs  create_state.rs  integrator.rs  interactions.rs  observe.rs  thermostat.rs
src/models/particles/interactions/: neighbor_list.rs  power_law.rs  spring_network.rs
src/space/: continuous.rs  discrete.rs  discrete_displacement.rs  kernel.rs  mod.rs  prelude.rs  space_trait.rs
src/space/discrete/: displacement.rs  mod.rs  representation.rs
src/tests/: space_discrete.rs  tensor_sparse.rs  tensors.rs  tensors_dense.rs  vector_list.rs  vectors.rs
tests/: crate_prelude.rs  engines.rs  engines_prelude.rs  math.rs  math_surface.rs  models.rs  ndarray_convert.rs  prelude.rs  scalar.rs  soa_interaction.rs  soa_phys_obj.rs  soa_runtime_tools.rs  soa_thermostat.rs  space.rs  space_discrete.rs  space_prelude.rs  tensor_sparse.rs  tensor_unified.rs  tensors_dense.rs  vector_list.rs
tests/engines/: interaction.rs  phys_obj.rs  prelude.rs  serde_flat.rs
tests/math/: math_surface.rs  ndarray_convert.rs  prelude.rs  serde_flat_format.rs  serde_roundtrip.rs  tensor_sparse.rs  tensor_unified.rs  tensors_dense.rs  vector_list.rs
tests/models/: boundary.rs  create_state.rs  integrator.rs  power_law.rs  spring_network.rs  thermostat.rs
tests/space/: grid_serde_flat.rs  space_discrete.rs  space_prelude.rs
